[package]
name = "actix-protobuf"
version = "0.4.1"
edition = "2018"
authors = ["kingxsp <jin.hb.zh@outlook.com>"]
description = "Protobuf support for actix-web framework."
readme = "README.md"
keywords = ["actix"]
homepage = "https://github.com/actix/actix-protobuf"
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config",
           "appveyor.yml", "/examples/**"]

[badges]
travis-ci = { repository = "actix/actix-protobuf", branch = "master" }
codecov = { repository = "actix/actix-protobuf", branch = "master", service = "github" }

[lib]
name = "actix_protobuf"
path = "src/lib.rs"

[dependencies]
bytes = "0.4"
futures = "0.3"
derive_more = "0.14"

actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"

prost = "0.5.0"

[dev-dependencies]
http = "^0.1"
prost-derive = "0.5.0"

[workspace]
members = [
  "./",
  "examples/prost-example",
]
